--- a/apps/frontend/rider/index.html
+++ b/apps/frontend/rider/index.html
@@ -1,23 +1,11 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover, minimal-ui" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#7C3AED" />
-    <meta name="msapplication-TileColor" content="#7C3AED" />
-    <meta name="apple-mobile-web-app-title" content="LiNKY Rider" />
-    <meta name="application-name" content="LiNKY Rider" />
-    <meta name="msapplication-config" content="none" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="date=no" />
-    <meta name="format-detection" content="address=no" />
-    <meta name="format-detection" content="email=no" />
-    <title>LiNKY Rider</title>
+    <title>lingki</title>
     <style>
       /* 전체 여백 제거 및 브라우저 UI 숨김 */
       html, body {
