--- a/apps/frontend/customer/index.html
+++ b/apps/frontend/customer/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#7C3AED">
     <meta name="msapplication-navbutton-color" content="#7C3AED">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
     <title>Vite App</title>
   </head>
   <body>
