--- a/apps/frontend/rider/index.html
+++ b/apps/frontend/rider/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#7C3AED" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
     <title>lingki</title>
     <style>
       /* 전체 여백 제거 및 브라우저 UI 숨김 */
